--- a/homeAlumno.html
+++ b/homeAlumno.html
@@ -44,6 +44,8 @@
                     <li><a href="seguimiento.html" class="smoothScroll">Seguimiento</a></li>
                     <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
                     <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
+                    <li><a href="index.html" class="smoothScroll">Login</a></li>
+
                 </ul>
             </div>
 
