--- a/homeProfe.html
+++ b/homeProfe.html
@@ -44,6 +44,7 @@
                     <li><a href="gEmpresa.html" class="smoothScroll">Gestionar Empresa</a></li>
                     <li><a href="aAsignados.html" class="smoothScroll">Alumnos Asignados</a></li>
                     <li><a href="gAlumnos.html" class="smoothScroll">Gestionar Alumnos</a></li>
+                    <li><a href="index.html" class="smoothScroll">Login</a></li>
                 </ul>
             </div>
 
