--- a/vistaAlumno/seguimientoAlumno.html
+++ b/vistaAlumno/seguimientoAlumno.html
@@ -73,6 +73,13 @@
             <td id="country_row1">Francisco</td>
             <td id="country_row1">DEKRA</td>
           </tr>
+          <tr id="row5">
+            <td id="semana_row">14/11--14/11</td>
+            <td id="country_row1">Viernes</td>
+            <td id="age_row1">Curso de Formacion  </td>
+            <td id="country_row1">Francisco</td>
+            <td id="country_row1">DEKRA</td>
+          </tr>
         </table>
       </div>
     <script src="js/seguimiento.js"></script>
