--- a/vistaAlumno/crearFichaSeg.html
+++ b/vistaAlumno/crearFichaSeg.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ficha Alumno</title>
+    <title>Crear Ficha Seguimiento</title>
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
