--- a/vistaAlumno/seguimientoAlumno.html
+++ b/vistaAlumno/seguimientoAlumno.html
@@ -30,10 +30,10 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="seguimiento.html" class="smoothScroll">Seguimiento</a></li>
-                    <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
-                    <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
-                    <li><a href="index.html" class="smoothScroll">Login</a></li>
+                  <li><a href="seguimientoAlumno.html" class="smoothScroll">Seguimiento</a></li>
+                  <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
+                  <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
+                  <li><a href="index.html" class="smoothScroll">Login</a></li>
                 </ul>
             </div>
         </div>
