--- a/vistaAlumno/fichaAlumno.html
+++ b/vistaAlumno/fichaAlumno.html
@@ -39,7 +39,7 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="seguimiento.html" class="smoothScroll">Seguimiento</a></li>
+                    <li><a href="seguimientoAlumno.html" class="smoothScroll">Seguimiento</a></li>
                     <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
                     <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
                     <li><a href="index.html" class="smoothScroll">Login</a></li>
