--- a/vistaProfesor/alumnosAsignados.html
+++ b/vistaProfesor/alumnosAsignados.html
@@ -38,9 +38,8 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="seguimiento.html" class="smoothScroll">Seguimiento</a></li>
-                    <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
-                    <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
+                    <li><a href="alumnosAsignados.html" class="smoothScroll">Alumnos Asignados</a></li>
+                    <li><a href="fichaProfesor.html" class="smoothScroll">Ficha de Profesor</a></li>
                     <li><a href="index.html" class="smoothScroll">Login</a></li>
                 </ul>
             </div>
@@ -65,6 +64,7 @@
                 <th>HORAS DUAL</th>
                 <th>HORA FCT</th>
                 <th>OBSERVACIONES</th>
+                <th>ACCIONES</th>
             </tr>
 
             <tr id="row1">
@@ -81,7 +81,9 @@
                 <td id="fct_row1">120</td>
                 <td id="observaciones_row1">-</td>
                 <td class="acciones">
-
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
             <tr id="row2">
@@ -98,6 +100,9 @@
                 <td id="fct_row2">120</td>
                 <td id="observaciones_row2">-</td>
                 <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
 
@@ -115,6 +120,9 @@
                 <td id="fct_row3">120</td>
                 <td id="observaciones_row3">-</td>
                 <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
 
