--- a/vistaAlumno/seguimientoAlumno.html
+++ b/vistaAlumno/seguimientoAlumno.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- CSS FILES -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <!-- Main css -->
-    <link rel="stylesheet" href="css/estiloHome.css">
-    <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather:300,400" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/63e77c34c9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estiloAdmin.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ficha Alumno</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather:300,400" rel="stylesheet">
+  <link rel="stylesheet" href="../css/estiloAdmin.css">
+  <link rel="stylesheet" href="../css/estiloHome.css">
+  <script src="https://kit.fontawesome.com/63e77c34c9.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
@@ -45,43 +44,37 @@
             <th >EMPRESA</th>
           </tr>
           <tr id="row1">
-            <td id="semana_row1">11/11--14/11</td>
-            <td id="dia_row1">Martes</td>
-            <td id="tarea_row1">Instalacion de aplicaciones necesarias </td>
-            <td id="country_row1">Francisco</td>
-            <td id="country_row1">DEKRA</td>
+            <td id="semana">11/11--14/11</td>
+            <td id="dia">Martes</td>
+            <td id="tarea">Instalacion de aplicaciones necesarias </td>
+            <td id="tutor">Francisco</td>
+            <td id="empresa">DEKRA</td>
           </tr>
           <tr id="row2">
-            <td id="semana_row2">12/11--14/11</td>
-            <td id="country_row1">Miercoles</td>
-            <td id="age_row1">Comienzo de un Curso de Formacion</td>
-            <td id="country_row1">Francisco</td>
-            <td id="country_row1">DEKRA</td>
+            <td id="semana">12/11--14/11</td>
+            <td id="dia">Miercoles</td>
+            <td id="tarea">Comienzo de un Curso de Formacion</td>
+            <td id="tutor">Francisco</td>
+            <td id="empresa">DEKRA</td>
           </tr>
         </tr>
         <tr id="row3">
           <td id="semana_row3">13/11--14/11</td>
-          <td id="country_row1">Jueves</td>
-          <td id="age_row1">Curso de Formacion </td>
-          <td id="country_row1">Francisco</td>
-            <td id="country_row1">DEKRA</td>
+          <td id="dia">Jueves</td>
+          <td id="tarea">Curso de Formacion </td>
+          <td id="tutor">Francisco</td>
+            <td id="dia">DEKRA</td>
         </tr>
         <tr id="row4">
-            <td id="semana_row">14/11--14/11</td>
-            <td id="country_row1">Viernes</td>
-            <td id="age_row1">Curso de Formacion  </td>
-            <td id="country_row1">Francisco</td>
-            <td id="country_row1">DEKRA</td>
+            <td id="semana">14/11--14/11</td>
+            <td id="dia">Viernes</td>
+            <td id="tarea">Curso de Formacion  </td>
+            <td id="tutor">Francisco</td>
+            <td id="empresa">DEKRA</td>
           </tr>
-          <tr id="row5">
-            <td id="semana_row">14/11--14/11</td>
-            <td id="country_row1">Viernes</td>
-            <td id="age_row1">Curso de Formacion  </td>
-            <td id="country_row1">Francisco</td>
-            <td id="country_row1">DEKRA</td>
-          </tr>
+         
         </table>
       </div>
-    <script src="js/seguimiento.js"></script>
+  
 </body>
 </html>
