--- a/vistaAlumno/crearFichaSeg.html
+++ b/vistaAlumno/crearFichaSeg.html
@@ -58,7 +58,7 @@
                 <th >Tarea Realizada</th>
                 <th >TUTOR</th>
                 <th >EMPRESA</th>
-                <th >acciones</th>
+                <th >ACCIONES</th>
               </tr>
             <tr id="row1">
                 <td id="semana_row1">11/14/2022</td>
