--- a/vistaProfesor/alumnosAsignados.html
+++ b/vistaProfesor/alumnosAsignados.html
@@ -125,6 +125,26 @@
                     <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
+            <tr id="row4">
+                <td id="nombre_row3">Javier</td>
+                <td id="apellidos_row3">Ramos Del Rio</td>
+                <td id="contraseña_row3">1234</td>
+                <td id="dni_row3">77643451W</td>
+                <td id="nacimiento_row3">05/09/2000</td>
+                <td id="email_row3">javierRamitos@gmail.com</td>
+                <td id="telefono_row3">605186976</td>
+                <td id="empresa_row3">Yo Pongo El Hielo</td>
+                <td id="tutor_row3">Francisco</td>
+                <td id="dual_row3">240</td>
+                <td id="fct_row3">120</td>
+                <td id="observaciones_row3">-</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                </td>
+            </tr>
+
 
 
         </table>
