--- a/vistaProfesor/alumnosAsignados.html
+++ b/vistaProfesor/alumnosAsignados.html
@@ -100,9 +100,9 @@
                 <td id="fct_row2">120</td>
                 <td id="observaciones_row2">-</td>
                 <td class="acciones">
-                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
-                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                    <button class="edit" onclick="edit_row('2');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('2');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('2');"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
 
@@ -120,16 +120,34 @@
                 <td id="fct_row3">120</td>
                 <td id="observaciones_row3">-</td>
                 <td class="acciones">
-                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
-                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                    <button class="edit" onclick="edit_row('3');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('3');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('3');"><i class="fa-solid fa-trash"></i></button>
                 </td>
+            </tr>
+            
+            <tr id="nuevos_campos">
+                <td><input type="text" id="nuevo_nombre"></td>
+                <td><input type="text" id="nuevos_apellidos"></td>
+                <td><input type="text" id="nueva_contraseña"></td>
+                <td><input type="text" id="nuevo_dni"></td>
+                <td><input type="date" id="nuevo_nacimiento"></td>
+                <td><input type="email" id="nuevo_email"></td>
+                <td><input type="tlf" id="nuevo_telefono"></td>
+                <td><input type="text" id="nuevo_tutor"></td>
+                <td><input type="text" id="nuevas_horasDual"></td>
+                <td><input type="text" id="nuevas_horasFCT"></td>
+                <td><input type="text" id="nuevas_horasFCT"></td>
+                <td><input type="text" id="nuevas_observaciones"></td>
+                <td><button class="add" onclick="add_row();"><i class="fa-solid fa-plus"></i></button></td>
             </tr>
 
 
         </table>
     </div>
 
+
+    <script src="../js/appAdmin.js"></script>
 
 
 </body>
