--- a/vistaEmpresa/gestionarEmpresa.html
+++ b/vistaEmpresa/gestionarEmpresa.html
@@ -46,6 +46,34 @@
 
         </div>
     </section>
-    
+    <div id="wrapper">
+        <table align='center' cellpadding=5 id="data_table" border=10>
+
+            <tr>
+                <th>NOMBRE EMPRESA ADMIN</th>
+                <td>Google</td>
+            </tr>
+            <tr>
+                <th>TELÉFONO</th>
+                <td>696777969</td>
+            </tr>
+
+            <tr>
+                <th>EMAIL</th>
+                <td>google@gmail.com</td>
+            </tr>
+
+            <tr>
+                <th>RESPONSABLE DE LA EMPRESA</th>
+                <td>Javier Moret Galán</td>
+            </tr>
+
+            <tr>
+                <th>OBSERVACIONES</th>
+                <td>Este alumno trabaja bien en equipo <br>
+                    y es puntual de vez en cuando.</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
