--- a/vistaEmpresa/gestionarEmpresa.html
+++ b/vistaEmpresa/gestionarEmpresa.html
@@ -52,26 +52,51 @@
             <tr>
                 <th>NOMBRE EMPRESA ADMIN</th>
                 <td>Google</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                </td>
             </tr>
             <tr>
                 <th>TELÉFONO</th>
                 <td>696777969</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                </td>
             </tr>
 
             <tr>
                 <th>EMAIL</th>
                 <td>google@gmail.com</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                </td>
             </tr>
 
             <tr>
                 <th>RESPONSABLE DE LA EMPRESA</th>
                 <td>Javier Moret Galán</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                </td>
             </tr>
 
             <tr>
                 <th>OBSERVACIONES</th>
                 <td>Este alumno trabaja bien en equipo <br>
                     y es puntual de vez en cuando.</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('1');" id="edit_button1"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('1');" id="save_button1"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('1');"><i class="fa-solid fa-trash"></i></button>
+                </td>
             </tr>
         </table>
     </div>
