--- a/vistaEmpresa/gestionarEmpresa.html
+++ b/vistaEmpresa/gestionarEmpresa.html
@@ -40,7 +40,8 @@
                     <li><a href="gEmpresa.html" class="smoothScroll">Gestionar Empresa</a></li>
                     <li><a href="aAsignados.html" class="smoothScroll">Alumnos Asignados</a></li>
                     <li><a href="gAlumnos.html" class="smoothScroll">Gestionar Alumnos</a></li>
-                    <li><a href="index.html" class="smoothScroll">Login</a></li>
+                    <li><a href="../index.html" class="smoothScroll">Login</a></li>
+
                 </ul>
             </div>
 
