--- a/vistaEmpresa/fichaEmpresa.html
+++ b/vistaEmpresa/fichaEmpresa.html
@@ -40,9 +40,9 @@
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="seguimiento.html" class="smoothScroll">Seguimiento</a></li>
                     <li><a href="vistaAlumno/fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
-                    <li><a href="vistaAlumno/crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a>
-                    </li>
-                    <li><a href="index.html" class="smoothScroll">Login</a></li>
+                    <li><a href="vistaAlumno/crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
+                    <li><a href="../index.html" class="smoothScroll">Login</a></li>
+
                 </ul>
             </div>
 
