--- a/vistaProfesor/fichaProfesor.html
+++ b/vistaProfesor/fichaProfesor.html
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="alumnosAsignados.html" class="smoothScroll">Alumnos Asignados</a></li>
                     <li><a href="fichaProfesor.html" class="smoothScroll">Ficha de Profesor</a></li>
-                    <li><a href="index.html" class="smoothScroll">Login</a></li>
+                    <li><a href="../index.html" class="smoothScroll">Login</a></li>
                 </ul>
             </div>
 
