commit casi final

--- a/vistaProfesor/alumnosAsignados.html
+++ b/vistaProfesor/alumnosAsignados.html
@@ -129,17 +129,17 @@
             
             <tr id="nuevos_campos">
                 <td><input type="text" id="nuevo_nombre"></td>
-                <td><input type="text" id="nuevos_apellidos"></td>
+                <td><input type="text" id="nuevo_apellidos"></td>
                 <td><input type="text" id="nueva_contraseña"></td>
                 <td><input type="text" id="nuevo_dni"></td>
                 <td><input type="date" id="nuevo_nacimiento"></td>
                 <td><input type="email" id="nuevo_email"></td>
                 <td><input type="tlf" id="nuevo_telefono"></td>
+                <td><input type="text" id="nueva_empresa"></td>
                 <td><input type="text" id="nuevo_tutor"></td>
-                <td><input type="text" id="nuevas_horasDual"></td>
-                <td><input type="text" id="nuevas_horasFCT"></td>
-                <td><input type="text" id="nuevas_horasFCT"></td>
-                <td><input type="text" id="nuevas_observaciones"></td>
+                <td><input type="text" id="nuevo_dual"></td>
+                <td><input type="text" id="nueva_fct"></td>
+                <td><input type="text" id="nueva_observaciones"></td>
                 <td><button class="add" onclick="add_row();"><i class="fa-solid fa-plus"></i></button></td>
             </tr>
 
