--- a/vistaAlumno/crearFichaSeg.html
+++ b/vistaAlumno/crearFichaSeg.html
@@ -56,14 +56,14 @@
             <tr>
                 <th>SEMANA </th>
                 <th>DIA</th>
-                <th >Tarea Realizada</th>
-                <th >TUTOR</th>
-                <th >EMPRESA</th>
-                <th >ACCIONES</th>
+                <th>Tarea Realizada</th>
+                <th>TUTOR</th>
+                <th>EMPRESA</th>
+                <th>ACCIONES</th>
               </tr>
             <tr id="row1">
-                <td id="semana_row1">11/14/2022</td>
-                <td id="dia_row1">Martes</td>
+                <td id="semana_row1">11/11/2022</td>
+                <td id="dia_row1">11/11/2022</td>
                 <td id="tarea_row1">Instalacion de aplicaciones necesarias</td>
                 <td id="tutor_row1">Francisco</td>
                 <td id="empresa_row1">DEKRA</td>
@@ -86,7 +86,7 @@
     </div>
 
    
-    <script src="js/crearficha.js"></script>
+    <script src="../js/crearficha.js"></script>
 
     
 </body>
