--- a/vistaAlumno/seguimientoAlumno.html
+++ b/vistaAlumno/seguimientoAlumno.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ficha Alumno</title>
+  <title>Fichas de seguimiento</title>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="seguimiento.html" class="smoothScroll">Seguimiento</a></li>
+                    <li><a href="seguimientoAlumno.html" class="smoothScroll">Seguimiento</a></li>
                     <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
                     <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
                     <li><a href="../index.html" class="smoothScroll">Login</a></li>
