--- a/vistaEmpresa/gestionarEmpresa.html
+++ b/vistaEmpresa/gestionarEmpresa.html
@@ -37,11 +37,10 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="gEmpresa.html" class="smoothScroll">Gestionar Empresa</a></li>
-                    <li><a href="aAsignados.html" class="smoothScroll">Alumnos Asignados</a></li>
-                    <li><a href="gAlumnos.html" class="smoothScroll">Gestionar Alumnos</a></li>
+                    <li><a href="../vistaProfesor/alumnosAsignados.html" class="smoothScroll">Alumnos Asignados</a></li>
+                    <li><a href="../vistaProfesor/fichaProfesor.html" class="smoothScroll">Ficha de Profesor</a></li>
+                    <li><a href="gestionarEmpresa.html" class="smoothScroll">Gestionar Empresa</a></li>
                     <li><a href="../index.html" class="smoothScroll">Login</a></li>
-
                 </ul>
             </div>
 
