--- a/vistaAlumno/crearFichaSeg.html
+++ b/vistaAlumno/crearFichaSeg.html
@@ -40,6 +40,7 @@
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="seguimientoAlumno.html" class="smoothScroll">Seguimiento</a></li>
                     <li><a href="fichaAlumno.html" class="smoothScroll">Ficha de Alumno</a></li>
+                    <li><a href="../vistaEmpresa/fichaEmpresa.html" class="smoothScroll">Ficha de la Empresa</a></li>
                     <li><a href="crearFichaSeg.html" class="smoothScroll">Crear Ficha de Seguimiento</a></li>
                     <li><a href="../index.html" class="smoothScroll">Login</a></li>
 
