--- a/vistaProfesor/alumnosAsignados.html
+++ b/vistaProfesor/alumnosAsignados.html
@@ -127,6 +127,26 @@
                     <button class="delete" onclick="delete_row('3');"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
+
+            <tr id="row4">
+                <td id="nombre_row3">Javier</td>
+                <td id="apellidos_row3">Ramos del Río</td>
+                <td id="contraseña_row3">1234</td>
+                <td id="dni_row3">77686342T</td>
+                <td id="nacimiento_row3">03/08/2003</td>
+                <td id="email_row3">javierRamos@gmail.com</td>
+                <td id="telefono_row3">601269641</td>
+                <td id="empresa_row3">YPEH</td>
+                <td id="tutor_row3">Francisco</td>
+                <td id="dual_row3">240</td>
+                <td id="fct_row3">120</td>
+                <td id="observaciones_row3">-</td>
+                <td class="acciones">
+                    <button class="edit" onclick="edit_row('3');" id="edit_button3"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="save" onclick="save_row('3');" id="save_button3"><i class="fa-solid fa-floppy-disk"></i></button>
+                    <button class="delete" onclick="delete_row('3');"><i class="fa-solid fa-trash"></i></button>
+                </td>
+            </tr>
             
             <tr id="nuevos_campos">
                 <td><input type="text" id="nuevo_nombre"></td>
